--- a/templates/CustomColumnsOverride/apps.v1.statefulsets.yaml
+++ b/templates/CustomColumnsOverride/apps.v1.statefulsets.yaml
@@ -34,7 +34,7 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-      type: date
+        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
@@ -65,7 +65,7 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-      type: date
+        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
