--- a/templates/CustomColumnsOverride/v1.serviceaccounts.yaml
+++ b/templates/CustomColumnsOverride/v1.serviceaccounts.yaml
@@ -16,7 +16,7 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-      type: date
+        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
   additionalPrinterColumnsUndefinedValues:
     - key: Namespace
       value: "-"
@@ -44,7 +44,7 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-      type: date
+        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
   additionalPrinterColumnsUndefinedValues:
     - key: Secrets
       value: "-"
