--- a/templates/CustomColumnsOverride/apps.v1.replicasets.yaml
+++ b/templates/CustomColumnsOverride/apps.v1.replicasets.yaml
@@ -19,7 +19,7 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-      type: date
+        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
@@ -45,7 +45,7 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-      type: date
+        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
@@ -71,7 +71,7 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-      type: date
+        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
