--- a/templates/CustomColumnsOverride/v1.secrets.yaml
+++ b/templates/CustomColumnsOverride/v1.secrets.yaml
@@ -16,7 +16,7 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-      type: date
+        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
@@ -37,7 +37,7 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-      type: date
+        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
