--- a/templates/CustomColumnsOverride/v1.serviceaccounts.yaml
+++ b/templates/CustomColumnsOverride/v1.serviceaccounts.yaml
@@ -16,7 +16,9 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
   additionalPrinterColumnsUndefinedValues:
     - key: Namespace
       value: "-"
@@ -44,7 +46,9 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
   additionalPrinterColumnsUndefinedValues:
     - key: Secrets
       value: "-"
