--- a/templates/CustomColumnsOverride/argocd/argoproj.io.v1alpha1.applications.yaml
+++ b/templates/CustomColumnsOverride/argocd/argoproj.io.v1alpha1.applications.yaml
@@ -26,7 +26,9 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
@@ -72,7 +74,9 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
