--- a/templates/CustomColumnsOverride/v1.pods.yaml
+++ b/templates/CustomColumnsOverride/v1.pods.yaml
@@ -31,7 +31,9 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
   additionalPrinterColumnsUndefinedValues:
     - key: Node
       value: Unschedulable
@@ -75,7 +77,9 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
   additionalPrinterColumnsUndefinedValues:
     - key: Node
       value: Unschedulable
@@ -122,7 +126,9 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
   additionalPrinterColumnsUndefinedValues:
     - key: Node
       value: Unschedulable
@@ -166,7 +172,9 @@ spec:
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
-        {{- include "incloud-web-resources.factory.time.create" . | nindent 8 -}}
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
   additionalPrinterColumnsUndefinedValues:
     - key: Node
       value: Unschedulable
