--- a/templates/CustomColumnsOverride/v1.pods.yaml
+++ b/templates/CustomColumnsOverride/v1.pods.yaml
@@ -33,7 +33,10 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
+        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+          "req" ".metadata.creationTimestamp"
+          ) | nindent 8
+        }}
   additionalPrinterColumnsUndefinedValues:
     - key: Node
       value: Unschedulable
@@ -79,7 +82,10 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
+        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+          "req" ".metadata.creationTimestamp"
+          ) | nindent 8
+        }}
   additionalPrinterColumnsUndefinedValues:
     - key: Node
       value: Unschedulable
@@ -128,7 +134,10 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
+        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+          "req" ".metadata.creationTimestamp"
+          ) | nindent 8
+        }}
   additionalPrinterColumnsUndefinedValues:
     - key: Node
       value: Unschedulable
@@ -174,7 +183,10 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
+        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+          "req" ".metadata.creationTimestamp"
+          ) | nindent 8
+        }}
   additionalPrinterColumnsUndefinedValues:
     - key: Node
       value: Unschedulable
