--- a/templates/CustomColumnsOverride/batch.v1.jobs.yaml
+++ b/templates/CustomColumnsOverride/batch.v1.jobs.yaml
@@ -33,7 +33,10 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
+        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+          "req" ".metadata.creationTimestamp"
+          ) | nindent 8
+        }}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
@@ -76,7 +79,10 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
+        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+          "req" ".metadata.creationTimestamp"
+          ) | nindent 8
+        }}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
@@ -122,7 +128,10 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
+        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+          "req" ".metadata.creationTimestamp"
+          ) | nindent 8
+        }}
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
