--- a/templates/CustomColumnsOverride/rbac.authorization.k8s.io.v1.clusterrolebindings.yaml
+++ b/templates/CustomColumnsOverride/rbac.authorization.k8s.io.v1.clusterrolebindings.yaml
@@ -27,7 +27,10 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.time.create" . | nindent 8 }}
+        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+          "req" ".metadata.creationTimestamp"
+          ) | nindent 8
+        }}
   additionalPrinterColumnsUndefinedValues:
     - key: Role ref
       value: "-"
