--- a/templates/CustomColumnsOverride/argocd/argoproj.io.v1alpha1.applications.yaml
+++ b/templates/CustomColumnsOverride/argocd/argoproj.io.v1alpha1.applications.yaml
@@ -28,7 +28,7 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+        {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
         }}
@@ -79,7 +79,7 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+        {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
         }}
