--- a/templates/CustomColumnsOverride/v1.configmaps.yaml
+++ b/templates/CustomColumnsOverride/v1.configmaps.yaml
@@ -15,7 +15,7 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+        {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
         }}
@@ -41,7 +41,7 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+        {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
         }}
@@ -67,7 +67,7 @@ spec:
       name: Created
       type: factory
       customProps:
-        {{ include "incloud-web-resources.factory.timeblock.create" (dict
+        {{ include "incloud-web-resources.factory.timeblock" (dict
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
         }}
